--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,9 +19,9 @@
             --sidebar-width: 250px; /* Define sidebar width */
         }
         
-        body {
-            /* Removed padding-left: var(--sidebar-width); */
-        }
+        /* body {
+            Removed padding-left: var(--sidebar-width);
+        } */
 
         .sidebar {
             position: fixed; /* Fix the sidebar */
