--- a/app/templates/edit_patient.html
+++ b/app/templates/edit_patient.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="card-body">
                     <form action="{{ url_for('main.edit_patient', id=patient.id) }}" method="POST">
-                        {{ csrf_token() }}
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                         <div class="row">
                             <!-- Personal Information Section -->
                             <div class="col-md-6">
